# lightweight_human_pose_estimation

./: .gitignore  CMakeLists.txt  README.en.md  README.md  install.sh  package.xml  setup.cfg  setup.py
keypoints/: key_point_dictionary.yaml
launch/: demo.launch  human_pose.launch  human_pose.launch.py  human_pose_2d.launch  human_pose_3d.launch  human_pose_estimation.launch  human_pose_estimation_3d.launch
lightweight_human_pose_estimation/: CMakeLists.txt  human_pose_2d.py  install.sh  package.xml
lightweight_human_pose_estimation/config/rviz/: human_pose.rviz
lightweight_human_pose_estimation/launch/: camera2.launch  human_pose.launch.xml  human_pose_2d.launch.xml
lightweight_human_pose_estimation/script/: demo.py  demo2.py  human_pose_2d.py
lightweight_human_pose_estimation/script/modules/: keypoints.py
lightweight_human_pose_estimation/src/: human_pose_3d.cpp
lightweight_human_pose_estimation_msgs/: CMakeLists.txt  package.xml
lightweight_human_pose_estimation_msgs/msg/: KeyPoint2DArray.msg  KeyPoint3D.msg  KeyPoint3DArray.msg
modules/: datasets_coco.py  val.py
msg/: KeyPoint2DArray.msg  KeyPoint3DArray.msg
script/: human_pose_2d.py  human_pose_estimation.py
script/modules/: keypoints.py
src/: human_pose_3d.cpp  human_pose_tf_broadcaster.cpp
