<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lightweight_human_pose_estimation_msgs</name>  
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sobits@todo.todo">sobits</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_generators</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
    <build_depend>rosidl_default_generators</build_depend>
    <build_depend>rosidl_typesupport_cpp</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
  </export>
  <!-- Member of group -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>